--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ coverage==4.5.1
 coveralls==1.3.0
 docopt==0.6.2
 Flask==1.0.2
+Flask-JWT-Extended==3.12.1
 future==0.16.0
 gunicorn==19.9.0
 idna==2.7
@@ -23,9 +24,12 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.3.0
+pep8==1.7.1
 pluggy==0.7.1
 poyo==0.4.1
+psycopg2==2.7.5
 py==1.5.4
+PyJWT==1.6.4
 pylint==2.1.1
 pytest==3.7.2
 pytest-cov==2.5.1
